Add form to index.erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,5 +8,20 @@
     <h1>Welcome to Barber Shop!</h1>
 
     <p>We are open</p>
+
+    <form action="/" method="post">
+
+      <label>Your name:</label> <br>
+      <input type="text" name="user_name"> <br>
+
+      <label>Your phone:</label> <br>
+      <input type="text" name="phone"> <br>
+
+      <label>Visiting date and time:</label> <br>
+      <input type="text" name="date_time"> <br>
+
+      <button type="submit" name="submit">Send</button>
+    </form>
+
   </body>
 </html>
