--- a/views/index.erb
+++ b/views/index.erb
@@ -2,12 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="./styles.css" type="text/css" rel="stylesheet" />
     <title>Barber Shop</title>
   </head>
   <body>
-    <h1>Welcome to Barber Shop!</h1>
+    <h1 class="some">Welcome to Barber Shop!</h1>
 
-    <p>We are open</p>
+    <p id="uniq">We are open</p>
 
     <form action="/" method="post">
 
